--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -194,6 +194,7 @@ ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
 EGREP = @EGREP@
 EXEEXT = @EXEEXT@
+EXTRA_LDFLAGS = @EXTRA_LDFLAGS@
 EXTRA_WINDRES_ARG = @EXTRA_WINDRES_ARG@
 FGREP = @FGREP@
 GREP = @GREP@
