--- a/src/data/Makefile.in
+++ b/src/data/Makefile.in
@@ -110,6 +110,7 @@ ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
 EGREP = @EGREP@
 EXEEXT = @EXEEXT@
+EXTRA_LDFLAGS = @EXTRA_LDFLAGS@
 EXTRA_WINDRES_ARG = @EXTRA_WINDRES_ARG@
 FGREP = @FGREP@
 GREP = @GREP@
