--- a/src/linux-menu/winusbgui.desktop
+++ b/src/linux-menu/winusbgui.desktop
@@ -11,5 +11,7 @@ Categories=Application;System;
 StartupNotify=true
 Name=WinUSB
 Name[fr_FR]=WinUSB
+Name[zh_TW]=WinUSB Windows 可開機 USB 製作工具
 Comment=Create Windows USB stick installer from a real Windows DVD or an image.
 Comment[fr_FR]=Créer des clés USB d'installation de Windows depuis une image CD ou un dvd original.
+Comment[zh_TW]=從一個既有的 Windows DVD 或光碟映像檔建立 Windows 可開機 USB 安裝碟
