--- a/src/locale/Makefile.am
+++ b/src/locale/Makefile.am
@@ -1,4 +1,4 @@
 # Il faut mettre les fichiers dans le sous dossier locale de share...
-SUBDIRS = fr
+SUBDIRS = fr zh_TW
 
 EXTRA_DIST = $(srcdir)/*.mo $(srcdir)/*.po
