--- a/src/config.hpp.in
+++ b/src/config.hpp.in
@@ -1,4 +1,4 @@
-/* src/config.hpp.in.  Generated from configure.in by autoheader.  */
+/* src/config.hpp.in.  Generated from configure.ac by autoheader.  */
 
 /* Define is a debug version sould be build */
 #undef DEBUG
@@ -36,8 +36,7 @@
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
 
-/* Define to the sub-directory in which libtool stores uninstalled libraries.
-   */
+/* Define to the sub-directory where libtool stores uninstalled libraries. */
 #undef LT_OBJDIR
 
 /* Name of package */
