--- a/src/linux-menu/winusbgui.desktop
+++ b/src/linux-menu/winusbgui.desktop
@@ -9,7 +9,7 @@ X-MultipleArgs=false
 Type=Application
 Categories=Application;System;
 StartupNotify=true
-Name=WinUSB
-Name[fr_FR]=WinUSB
+Name=WinUSB+
+Name[fr_FR]=WinUSB+
 Comment=Create Windows USB stick installer from a real Windows DVD or an image.
 Comment[fr_FR]=Créer des clés USB d'installation de Windows depuis une image CD ou un dvd original.
