Debian: control: Add original software site
Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/debian/control
+++ b/debian/control
@@ -20,4 +20,4 @@ Description: WinUSB+ can create bootable windows installer on usb.
  for any language and any version (home, pro...)
  and Windows PE.
  .
- This is a fork of Colin GILLE / congelli501's WinUSB project
+ This is a fork of Colin GILLE / congelli501's WinUSB software(http://en.congelli.eu/prog_info_winusb.html)
