--- a/debian/rules
+++ b/debian/rules
@@ -62,7 +62,7 @@ install: build
 	dh_installdirs
 
 	# Add here commands to install the package into debian/winusb.
-	$(MAKE) DESTDIR="$(CURDIR)/debian/winusb" install
+	$(MAKE) DESTDIR="$(CURDIR)/debian/winusb+" install
 
 
 # Build architecture-independent files here.
