Debian: control: Fix GUI name
Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Conflicts: winusb
 Replaces: winusb
 Description: WinUSB+ can create bootable windows installer on usb.
  This package contains two programs:
-  - WinUSB-gui: a simple tool that enable you to create
+  - winusbgui: a simple tool that enable you to create
  your own usb stick windows installer from iso image
  or a real DVD.
   - winusb: the command line tool.
