debian/control: Use folded format for *Depends field for better version control
Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/debian/control
+++ b/debian/control
@@ -3,13 +3,25 @@ Homepage: https://github.com/slacka/WinUSB
 Section: x11
 Priority: extra
 Maintainer: 林博仁 <Buo.Ren.Lin@gmail.com>
-Build-Depends: debhelper (>= 7), autotools-dev, libwxgtk2.8-dev (>= 2.8.4) | libwxgtk3.0-dev
+Build-Depends: 
+	debhelper (>= 7), 
+	autotools-dev, 
+	libwxgtk2.8-dev (>= 2.8.4) | libwxgtk3.0-dev
 Standards-Version: 3.8.1
-Homepage: https://github.com/slacka/WinUSB
 
 Package: winusb+
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, parted, coreutils, bash, grub-pc | grub-efi-amd64 | grub-efi-i386, grub-pc-bin, gksu, ntfsprogs | ntfs-3g (>= 1:2011), p7zip-full
+Depends: 
+	${shlibs:Depends}, 
+	${misc:Depends}, 
+	parted, 
+	coreutils, 
+	bash, 
+	grub-pc | grub-efi-amd64 | grub-efi-i386, 
+	grub-pc-bin, 
+	gksu, 
+	ntfsprogs | ntfs-3g (>= 1:2011), 
+	p7zip-full
 Conflicts: winusb
 Replaces: winusb
 Description: WinUSB+ can create bootable windows installer on usb.
