Travis CI: Fix runtime dependency
Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ dist: trusty
 addons:
   apt:
     packages:
+    - realpath # Not required least after 16.04
     - debhelper
     - autotools-dev
     - libwxgtk2.8-dev
