--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-AC_INIT(winusb, @@WINUSB_VERSION@@)
+AC_INIT(winusb+, @@WINUSB_VERSION@@)
 AC_CONFIG_SRCDIR([src])
 AM_INIT_AUTOMAKE
 AC_CONFIG_MACRO_DIR([m4])
