--- a/src/woeusbgui.cbp
+++ b/src/woeusbgui.cbp
@@ -2,13 +2,13 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="winusbgui" />
+		<Option title="woeusbgui" />
 		<Option makefile_is_custom="1" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Release">
-				<Option output="winusbgui" prefix_auto="1" extension_auto="1" />
+				<Option output="woeusbgui" prefix_auto="1" extension_auto="1" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Option projectLinkerOptionsRelation="2" />
