--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -35,7 +35,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-bin_PROGRAMS = winusbgui$(EXEEXT)
+bin_PROGRAMS = woeusbgui$(EXEEXT)
 subdir = src
 DIST_COMMON = $(dist_bin_SCRIPTS) $(srcdir)/Makefile.am \
 	$(srcdir)/Makefile.in $(srcdir)/config.hpp.in
@@ -51,7 +51,7 @@ CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(bindir)" \
 	"$(DESTDIR)$(man1dir)"
 PROGRAMS = $(bin_PROGRAMS)
-am__winusbgui_SOURCES_DIST = AppConfig.hpp DialogAbout.hpp \
+am__woeusbgui_SOURCES_DIST = AppConfig.hpp DialogAbout.hpp \
 	MainPanel.cpp App.cpp findFile.cpp MainPanel.hpp \
 	processManager.hpp App.hpp findFile.hpp MyException.cpp \
 	strWxStdConv.cpp MainFrame.cpp MyException.hpp \
@@ -61,15 +61,15 @@ am__objects_1 = MainPanel.$(OBJEXT) App.$(OBJEXT) findFile.$(OBJEXT) \
 	MyException.$(OBJEXT) strWxStdConv.$(OBJEXT) \
 	MainFrame.$(OBJEXT) DialogAbout.$(OBJEXT) \
 	processManager.$(OBJEXT)
-@HAVE_WINDRES_FALSE@am_winusbgui_OBJECTS = $(am__objects_1)
-@HAVE_WINDRES_TRUE@am_winusbgui_OBJECTS = $(am__objects_1) \
+@HAVE_WINDRES_FALSE@am_woeusbgui_OBJECTS = $(am__objects_1)
+@HAVE_WINDRES_TRUE@am_woeusbgui_OBJECTS = $(am__objects_1) \
 @HAVE_WINDRES_TRUE@	rc.$(OBJEXT)
-winusbgui_OBJECTS = $(am_winusbgui_OBJECTS)
+woeusbgui_OBJECTS = $(am_woeusbgui_OBJECTS)
 am__DEPENDENCIES_1 =
-winusbgui_DEPENDENCIES = $(am__DEPENDENCIES_1)
-winusbgui_LINK = $(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) \
+woeusbgui_DEPENDENCIES = $(am__DEPENDENCIES_1)
+woeusbgui_LINK = $(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) \
 	$(LIBTOOLFLAGS) --mode=link $(CXXLD) $(AM_CXXFLAGS) \
-	$(CXXFLAGS) $(winusbgui_LDFLAGS) $(LDFLAGS) -o $@
+	$(CXXFLAGS) $(woeusbgui_LDFLAGS) $(LDFLAGS) -o $@
 am__vpath_adj_setup = srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`;
 am__vpath_adj = case $$p in \
     $(srcdir)/*) f=`echo "$$p" | sed "s|^$$srcdirstrip/||"`;; \
@@ -120,8 +120,8 @@ CCLD = $(CC)
 LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
 	--mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) \
 	$(LDFLAGS) -o $@
-SOURCES = $(winusbgui_SOURCES)
-DIST_SOURCES = $(am__winusbgui_SOURCES_DIST)
+SOURCES = $(woeusbgui_SOURCES)
+DIST_SOURCES = $(am__woeusbgui_SOURCES_DIST)
 RECURSIVE_TARGETS = all-recursive check-recursive dvi-recursive \
 	html-recursive info-recursive install-data-recursive \
 	install-dvi-recursive install-exec-recursive \
@@ -304,21 +304,21 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 SUBDIRS = data locale win32 linux-menu
 INCLUDES = $(CFLAGS_ALL)
-winusbgui_LDFLAGS = $(EXTRA_LDFLAGS)
-winusbgui_LDADD = $(LIBS_ALL)
-winusbguiSrcBase = AppConfig.hpp	 DialogAbout.hpp  MainPanel.cpp \
+woeusbgui_LDFLAGS = $(EXTRA_LDFLAGS)
+woeusbgui_LDADD = $(LIBS_ALL)
+woeusbguiSrcBase = AppConfig.hpp	 DialogAbout.hpp  MainPanel.cpp \
 	App.cpp		 findFile.cpp	  MainPanel.hpp     processManager.hpp \
 	App.hpp		 findFile.hpp	  MyException.cpp   strWxStdConv.cpp \
 	MainFrame.cpp	  MyException.hpp   strWxStdConv.hpp \
 	DialogAbout.cpp  MainFrame.hpp	  nbStrConvert.hpp \
 	processManager.cpp
 
-@HAVE_WINDRES_FALSE@winusbgui_SOURCES = $(winusbguiSrcBase)
-@HAVE_WINDRES_TRUE@winusbgui_SOURCES = $(winusbguiSrcBase) rc.rc
+@HAVE_WINDRES_FALSE@woeusbgui_SOURCES = $(woeusbguiSrcBase)
+@HAVE_WINDRES_TRUE@woeusbgui_SOURCES = $(woeusbguiSrcBase) rc.rc
 
 # Install my_script in $(bindir) and distribute it.
-dist_bin_SCRIPTS = winusb
-man_MANS = winusbgui.1 winusb.1
+dist_bin_SCRIPTS = woeusb
+man_MANS = woeusbgui.1 woeusb.1
 EXTRA_DIST = $(srcdir)/*.cbp $(man_MANS) $(srcdir)/rc.rc $(srcdir)/installDll.sh
 all: config.hpp
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
@@ -413,9 +413,9 @@ clean-binPROGRAMS:
 	list=`for p in $$list; do echo "$$p"; done | sed 's/$(EXEEXT)$$//'`; \
 	echo " rm -f" $$list; \
 	rm -f $$list
-winusbgui$(EXEEXT): $(winusbgui_OBJECTS) $(winusbgui_DEPENDENCIES) $(EXTRA_winusbgui_DEPENDENCIES) 
-	@rm -f winusbgui$(EXEEXT)
-	$(winusbgui_LINK) $(winusbgui_OBJECTS) $(winusbgui_LDADD) $(LIBS)
+woeusbgui$(EXEEXT): $(woeusbgui_OBJECTS) $(woeusbgui_DEPENDENCIES) $(EXTRA_woeusbgui_DEPENDENCIES) 
+	@rm -f woeusbgui$(EXEEXT)
+	$(woeusbgui_LINK) $(woeusbgui_OBJECTS) $(woeusbgui_LDADD) $(LIBS)
 install-dist_binSCRIPTS: $(dist_bin_SCRIPTS)
 	@$(NORMAL_INSTALL)
 	test -z "$(bindir)" || $(MKDIR_P) "$(DESTDIR)$(bindir)"
