--- a/src/linux-menu/woeusbgui.desktop
+++ b/src/linux-menu/woeusbgui.desktop
@@ -2,14 +2,14 @@
 [Desktop Entry]
 Version=1.0
 Encoding=UTF-8
-Exec=winusbgui
-Icon=winusbgui-icon.png
+Exec=woeusbgui
+Icon=woeusbgui-icon.png
 Terminal=false
 X-MultipleArgs=false
 Type=Application
 Categories=Application;System;
 StartupNotify=true
-Name=WinUSB+
-Name[fr_FR]=WinUSB+
+Name=WoeUSB
+Name[fr_FR]=WoeUSB
 Comment=Create Windows USB stick installer from a real Windows DVD or an image.
 Comment[fr_FR]=Créer des clés USB d'installation de Windows depuis une image CD ou un dvd original.
