--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,9 @@ Maintainer: 林博仁 <Buo.Ren.Lin@gmail.com>
 Build-Depends: 
 	debhelper (>= 7), 
 	autotools-dev, 
-	libwxgtk2.8-dev (>= 2.8.4) | libwxgtk3.0-dev
+	libwxgtk2.8-dev (>= 2.8.4) | libwxgtk3.0-dev, 
+	git, 
+	bash
 Standards-Version: 3.8.1
 
 Package: woeusb
