Debian: control: Add dependency for `realpath` command for Ubuntu 14.04
Debian drops `readlink` command in favor of self provided readlink package at Coreutils 8.20-1 and add it back at 8.23-1, make sure we support both of them.
This affects at least Ubuntu 14.04(but not 16.04 and newer)

Related-to: #693211 - coreutils: file conflict with realpath - Debian Bug report logs <https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=%23693211>
Related-to: #730779 - please include coreutils realpath - Debian Bug report logs <https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=%23730779>
Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,8 @@ Build-Depends:
 	autotools-dev, 
 	libwxgtk2.8-dev (>= 2.8.4) | libwxgtk3.0-dev, 
 	git, 
-	bash
+	bash, 
+	realpath | coreutils (>= 8.23-1)
 Standards-Version: 3.8.1
 
 Package: woeusb
@@ -23,7 +24,8 @@ Depends:
 	grub-pc-bin, 
 	gksu, 
 	ntfsprogs | ntfs-3g (>= 1:2011), 
-	p7zip-full
+	p7zip-full, 
+	realpath | coreutils (>= 8.23-1)
 Conflicts: winusb, winusb+
 Replaces: winusb, winusb+
 Description: WoeUSB can create bootable windows installer on usb.
