--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ compiler:
 script:
 # For triggering smudge-version
 - ./setup-development-environment.bash
-- mk-build-deps
+- mk-build-deps && mv woeusb-build-deps*.deb ..
 - dpkg-buildpackage -uc -b
 deploy:
   provider: releases
