desktop entry: As per specification filename extension of icon is unneeded.
Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/src/linux-menu/woeusbgui.desktop
+++ b/src/linux-menu/woeusbgui.desktop
@@ -3,7 +3,7 @@
 Version=1.0
 Encoding=UTF-8
 Exec=woeusbgui
-Icon=woeusbgui-icon.png
+Icon=woeusbgui-icon
 Terminal=false
 X-MultipleArgs=false
 Type=Application
