--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends:
 	debhelper (>= 7), 
 	autotools-dev, 
 	libwxgtk2.8-dev (>= 2.8.4) | libwxgtk3.0-dev, 
-	git, 
+	git-core, 
 	bash, 
 	realpath | coreutils (>= 8.23-1)
 Standards-Version: 3.8.1
