Fixed autoreconf error

--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 AC_INIT(woeusb, @@WOEUSB_VERSION@@)
 AC_CONFIG_SRCDIR([src])
-AM_INIT_AUTOMAKE
+AM_INIT_AUTOMAKE([foreign])
 AC_CONFIG_MACRO_DIR([m4])
 
 MY_PACKAGE_INIT([WoeUSB])
