Fixed locale issue #50

--- a/src/locale/fr/LC_MESSAGES/Makefile.am
+++ b/src/locale/fr/LC_MESSAGES/Makefile.am
@@ -1,5 +1,8 @@
 # Il faut mettre les fichiers dans le sous dossier locale/fr/LC_MESSAGES de share...
 pkgdatadir=$(mypkgdatadir)/locale/fr/LC_MESSAGES
 
-dist_pkgdata_DATA = $(srcdir)/*.mo
 EXTRA_DIST = $(srcdir)/*.po
+
+all-local:
+	msgfmt trad.po -o trad.mo
+	msgfmt wxstd.po -o wxstd.mo
