--- a/src/locale/fr/LC_MESSAGES/Makefile.am
+++ b/src/locale/fr/LC_MESSAGES/Makefile.am
@@ -3,3 +3,7 @@ pkgdatadir=$(mypkgdatadir)/locale/fr/LC_MESSAGES
 
 dist_pkgdata_DATA = $(srcdir)/*.mo
 EXTRA_DIST = $(srcdir)/*.po
+
+all-local:
+	msgfmt trad.po -o trad.mo
+	msgfmt wxstd.po -o wxstd.mo
