--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,6 @@
 Source: woeusb
 Homepage: https://github.com/slacka/WoeUSB
-Section: x11
+Section: utils
 Priority: extra
 Maintainer: 林博仁 <Buo.Ren.Lin@gmail.com>
 Build-Depends: 
