src/locale: Fix translation data not installed
Since commit 05eda7ad the machine-friendly translation data is not installed in the installation prefix due to the removed dist_pkgdata_DATA variable, this commit reverted it.

Regression-from: Fixed locale issue #50 · slacka/WoeUSB@05eda7a <https://github.com/slacka/WoeUSB/commit/05eda7ada6a14f987120428bdbfd1068f193e53d>
Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/src/locale/zh_TW/LC_MESSAGES/Makefile.am
+++ b/src/locale/zh_TW/LC_MESSAGES/Makefile.am
@@ -1,6 +1,6 @@
 # Il faut mettre les fichiers dans le sous dossier locale/zh_TW/LC_MESSAGES de share...
 pkgdatadir=$(mypkgdatadir)/locale/zh_TW/LC_MESSAGES
-
+dist_pkgdata_DATA = $(srcdir)/*.mo
 EXTRA_DIST = $(srcdir)/*.po
 
 all-local:
