Travis: Fix build error due to wrong command
Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ script:
 - mk-build-deps && mv woeusb-build-deps*.deb ..
 - autoreconf --force --install
 - ./configure
-- ./make
+- make
 
 deploy:
   provider: releases
