--- a/src/locale/fr/LC_MESSAGES/Makefile.am
+++ b/src/locale/fr/LC_MESSAGES/Makefile.am
@@ -1,8 +1,9 @@
 # Il faut mettre les fichiers dans le sous dossier locale/fr/LC_MESSAGES de share...
 pkgdatadir=$(mypkgdatadir)/locale/fr/LC_MESSAGES
-dist_pkgdata_DATA = $(srcdir)/*.mo
-EXTRA_DIST = $(srcdir)/*.po
 
-all-local:
-	msgfmt trad.po -o trad.mo
-	msgfmt wxstd.po -o wxstd.mo
+%.mo: %.po
+	msgfmt -o $@ $<
+
+dist_pkgdata_DATA = \
+	$(srcdir)/trad.mo\
+	$(srcdir)/wxstd.mo
