src/locale: Properly rename po filenames
Fix them to `<package>.po`

Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/src/locale/fr/LC_MESSAGES/Makefile.am
+++ b/src/locale/fr/LC_MESSAGES/Makefile.am
@@ -5,5 +5,5 @@ pkgdatadir=$(mypkgdatadir)/locale/fr/LC_MESSAGES
 	msgfmt -o $@ $<
 
 dist_pkgdata_DATA = \
-	$(srcdir)/trad.mo\
+	$(srcdir)/woeusb.mo\
 	$(srcdir)/wxstd.mo
