debian/Makefile.am: Wrap long lines
Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/debian/Makefile.am
+++ b/debian/Makefile.am
@@ -1,1 +1,8 @@
-EXTRA_DIST = $(srcdir)/changelog  $(srcdir)/compat  $(srcdir)/control  $(srcdir)/copyright  $(srcdir)/dirs  $(srcdir)/docs  $(srcdir)/rules
+EXTRA_DIST = \
+	$(srcdir)/changelog\
+	$(srcdir)/compat\
+	$(srcdir)/control\
+	$(srcdir)/copyright\
+	$(srcdir)/dirs\
+	$(srcdir)/docs\
+	$(srcdir)/rules
