--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,7 @@ Homepage: https://github.com/slacka/WoeUSB
 Section: utils
 Priority: extra
 Maintainer: 林博仁 <Buo.Ren.Lin@gmail.com>
-Build-Depends: bash,
-               debhelper (>= 10),
+Build-Depends: debhelper (>= 10),
                git-core,
                libwxgtk2.8-dev (>= 2.8.4) | libwxgtk3.0-dev,
                realpath | coreutils (>= 8.23-1)
