--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: woeusb
 Homepage: https://github.com/slacka/WoeUSB
 Section: utils
 Priority: extra
-Maintainer: 林博仁 <Buo.Ren.Lin@gmail.com>
+Maintainer: 林博仁 (Buo-Ren, Lin) <Buo.Ren.Lin@gmail.com>
 Build-Depends: debhelper (>= 10),
                git-core,
                libwxgtk2.8-dev (>= 2.8.4) | libwxgtk3.0-dev,
