--- a/src/linux-menu/woeusbgui.desktop
+++ b/src/linux-menu/woeusbgui.desktop
@@ -5,7 +5,7 @@ Icon=woeusbgui-icon
 Terminal=false
 X-MultipleArgs=false
 Type=Application
-Categories=Application;System;
+Categories=System;
 StartupNotify=true
 Name=WoeUSB
 Name[fr_FR]=WoeUSB
