src/linux-menu/woeusbgui.desktop: Fix desktop-entry-lacks-keywords-entry Lintian warning
Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/src/linux-menu/woeusbgui.desktop
+++ b/src/linux-menu/woeusbgui.desktop
@@ -6,6 +6,7 @@ Terminal=false
 X-MultipleArgs=false
 Type=Application
 Categories=System;
+Keywords=Windows;UEFI;EFI;booting;
 StartupNotify=true
 Name=WoeUSB
 Name[fr_FR]=WoeUSB
