Debian packaging: Replace arch-dependent grub packages with grub-common
The previous problem of the dependency is that grub has ALOT of target architectures, and if running on an architecture that is not enumerated here APT will try to install grub-pc, which effectively removed the proper GRUB bootloader previously installed on system and interrupts the following bootup process.

This patch drops the dependency as it is not required anyway, we now depend on grub-common which shoud provide everything we need.

Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Standards-Version: 3.8.1
 
 Package: woeusb
 Architecture: any
-Depends: grub-pc | grub-efi-amd64 | grub-efi-ia32,
+Depends: grub-common,
          grub-pc-bin,
          ntfsprogs | ntfs-3g (>= 1:2011),
          p7zip-full,
