Implement NTFS filesystem support
This patch adds NTFS filesystem support to WoeUSB, the filesystem type can be specified via --target-filesystem commandline argument, and when doing so in --device mode an additional partition is created for writing the UEFI:NTFS partition image, --partition mode is supported as well, but it requires that the disk already have such partition.

Closes #32.

Powered-by: pbatard/uefi-ntfs: UEFI:NTFS - Boot NTFS partitions from UEFI <https://github.com/pbatard/uefi-ntfs>
Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,7 @@ Depends: grub-common,
          parted,
          realpath | coreutils (>= 8.23),
          util-linux, 
+         wget,
          ${misc:Depends},
          ${shlibs:Depends}
 Description: Bootable Windows installation/PE USB storage creator
