--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,8 @@ Standards-Version: 3.8.1
 
 Package: woeusb
 Architecture: any
-Depends: grub-common,
+Depends: bash (>4.4),
+         grub-common,
          grub-pc-bin,
          ntfsprogs | ntfs-3g (>= 1:2011),
          p7zip-full,
