src/woeusb: Support --version option
Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 configure.ac filter=version
 debian/changelog filter=version
+src/woeusb filter=version
 src/woeusb.1 filter=version
 src/woeusbgui.1 filter=version
