--- a/debian/control
+++ b/debian/control
@@ -17,6 +17,7 @@ Depends: bash (>4.3),
          ntfsprogs | ntfs-3g (>= 1:2011),
          p7zip-full,
          parted,
+         policykit-1,
          realpath | coreutils (>= 8.23),
          util-linux, 
          wget,
