Debian Packaging: Add missing runtime dependency: grep, findutils
Refer-to: [Software Dependencies · slacka/WoeUSB Wiki](https://github.com/slacka/WoeUSB/wiki/Software-Dependencies)
Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/debian/control
+++ b/debian/control
@@ -13,6 +13,8 @@ Package: woeusb
 Architecture: any
 Depends: bash (>4.3),
          dosfstools,
+         findutils,
+         grep,
          grub-common,
          grub-pc-bin,
          ntfsprogs | ntfs-3g (>= 1:2011),
