--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Maintainer: 林博仁 (Buo-Ren, Lin) <Buo.Ren.Lin@gmail.com>
 Build-Depends: debhelper (>= 10),
                git-core,
                libwxgtk2.8-dev (>= 2.8.4) | libwxgtk3.0-dev,
-               realpath | coreutils (>= 8.23-1)
+               realpath | coreutils (>= 8.23)
 Standards-Version: 3.8.1
 
 Package: woeusb
