Remove versioned dependencies where satisfied by all releases since oldoldstable (Wheezy)

--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Priority: optional
 Maintainer: 林博仁 (Buo-Ren, Lin) <Buo.Ren.Lin@gmail.com>
 Build-Depends: debhelper (>= 10),
                git-core,
-               libwxgtk2.8-dev (>= 2.8.4) | libwxgtk3.0-dev,
+               libwxgtk2.8-dev | libwxgtk3.0-dev,
                realpath | coreutils (>= 8.23)
 Standards-Version: 4.1.1
 
@@ -15,7 +15,7 @@ Depends: bash (>=4.3),
          dosfstools,
          grub-common,
          grub-pc-bin,
-         ntfsprogs | ntfs-3g (>= 1:2011),
+         ntfsprogs | ntfs-3g,
          p7zip-full,
          parted,
          policykit-1,
