Packaging: Debian: Add gettext package as build dependencies
It doesn't seems to be depended by `build-essential` package, thus adding it for the `msgfmt` command needed in building.

Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/debian/control
+++ b/debian/control
@@ -15,6 +15,7 @@ Package: woeusb
 Architecture: any
 Depends: bash (>=4.3),
          dosfstools,
+         gettext,
          grub-common,
          grub-pc-bin,
          ntfsprogs | ntfs-3g,
