Packaging: Debian: Depend on grub2-common instead of grub-common
It's grub2-common that provided grub-install(8)

Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,7 @@ Architecture: any
 Depends: bash (>=4.3),
          dosfstools,
          gettext,
-         grub-common,
+         grub2-common,
          grub-pc-bin,
          ntfsprogs | ntfs-3g,
          p7zip-full,
