Packaging: Debian: Add missing build dependency: dh-autoreconf
The following error message will appear if it is not installed:

```
dh: unable to load addon autoreconf<stripped>
```

thus add it to the build dependencies.

Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,7 @@ Section: utils
 Priority: optional
 Maintainer: 林博仁 (Buo-Ren, Lin) <Buo.Ren.Lin@gmail.com>
 Build-Depends: debhelper (>= 10),
+               dh-autoreconf,
                git-core,
                libwxgtk2.8-dev | libwxgtk3.0-dev,
                realpath | coreutils (>= 8.23)
