--- a/distribution/snappy/snap/snapcraft.yaml
+++ b/distribution/snappy/snap/snapcraft.yaml
@@ -58,9 +58,9 @@ parts:
     prepare: |
       ./setup-development-environment.bash
     filesets:
-      executables: [ bin/* ]
-      manpages: [ share/man ]
-      documentation: [ share/woeusb/* ]
+      executables: [usr/local/bin/*]
+      manpages: [usr/local/share/man]
+      documentation: [usr/local/share/woeusb/*]
     stage:
       - $executables
       - $manpages
