distribution/snappy: Fix snap name to conform to requirements
```
Issues while validating snapcraft.yaml: The 'name' property does not match the required schema: 'WoeUSB' is not a valid snap name. Snap names consist of lower-case alphanumeric characters and hyphens. They cannot be all numbers. They also cannot start or end with a hyphen.
```

Signed-off-by: 林博仁(Buo-Ren Lin) <Buo.Ren.Lin@gmail.com>

--- a/distribution/snappy/snap/snapcraft.yaml
+++ b/distribution/snappy/snap/snapcraft.yaml
@@ -5,7 +5,7 @@
 ## Top-level metadata
 ## The following keys are consumed by the store to present your package to users and inform snapd about your snap.
 ## https://docs.snapcraft.io/build-snaps/syntax#top-level-metadata
-name: WoeUSB
+name: woeusb
 version: @@WOEUSB_VERSION@@
 summary: WoeUSB can create bootable USB storage devices from Windows disc (images).
 description: |
