distribution/snappy: Support all build host architectures by default
Refer-to: architectures - The snapcraft syntax - Snaps are universal Linux packages <https://docs.snapcraft.io/build-snaps/syntax#architectures>
Signed-off-by: 林博仁(Buo-Ren Lin) <Buo.Ren.Lin@gmail.com>

--- a/distribution/snappy/snap/snapcraft.yaml
+++ b/distribution/snappy/snap/snapcraft.yaml
@@ -30,7 +30,7 @@ confinement: classic
 grade: devel
 #assumes: FIXME
 epoch: 0
-architectures: amd64
+#architectures: We support all architectures if possible
 
 ## Top-level YAML subsections
 ### Apps and daemons
