distribution/snappy: Specify build and runtime dependencies
Signed-off-by: 林博仁(Buo-Ren Lin) <Buo.Ren.Lin@gmail.com>

--- a/distribution/snappy/snap/snapcraft.yaml
+++ b/distribution/snappy/snap/snapcraft.yaml
@@ -54,6 +54,9 @@ parts:
     source: https://github.com/slacka/WoeUSB.git
     source-type: git
     source-depth: 30
+    build-packages:
+      #- libwxgtk2.8-dev
+      - libwxgtk3.0-dev
     prepare: |
       ./setup-development-environment.bash
     filesets:
@@ -64,6 +67,16 @@ parts:
       - $executables
       - $manpages
       - $documentation
+    stage-packages:
+      - bash
+      - dosfstools
+      - grub2-common
+      - grub-pc-bin
+      - ntfs-3g
+      - p7zip-full
+      - parted
+      - policykit-1
+      - wget
     prime:
       - $executables
       - $manpages
