--- a/distribution/snappy/snap/snapcraft.yaml
+++ b/distribution/snappy/snap/snapcraft.yaml
@@ -60,9 +60,9 @@ parts:
     prepare: |
       ./setup-development-environment.bash
     filesets:
-      executables: [usr/local/bin/*]
-      manpages: [usr/local/share/man]
-      documentation: [usr/local/share/woeusb/*]
+      documentation: [share/woeusb/*]
+      executables: [bin/*]
+      manpages: [share/man]
     stage:
       - $executables
       - $manpages
