distribution/snappy: Rename misc fileset to be more semantically correct
Signed-off-by: 林博仁(Buo-Ren Lin) <Buo.Ren.Lin@gmail.com>

--- a/distribution/snappy/snap/snapcraft.yaml
+++ b/distribution/snappy/snap/snapcraft.yaml
@@ -60,9 +60,9 @@ parts:
     prepare: |
       ./setup-development-environment.bash
     filesets:
-      documentation: [share/woeusb/*]
       executables: [bin/*]
       manpages: [share/man]
+      miscellaneous-files: [share/woeusb/*]
     stage:
       - $executables
       - $manpages
