distribution/snappy: Add desktop entry to filesets
Signed-off-by: 林博仁(Buo-Ren Lin) <Buo.Ren.Lin@gmail.com>

--- a/distribution/snappy/snap/snapcraft.yaml
+++ b/distribution/snappy/snap/snapcraft.yaml
@@ -61,6 +61,7 @@ parts:
       ./setup-development-environment.bash
     filesets:
       executables: [bin/*]
+      freedesktop-desktop-entry: [share/applications/woeusbgui.desktop]
       manpages: [share/man]
       miscellaneous-files: [share/woeusb/*]
     stage:
